# mglet-micro

./: CMakeLists.txt  Makefile  build.sh
cmake/: CMakeLists.txt  TestMultiThreadingMPI.cmake  TestThreadingOpenMP.cmake
src/: CMakeLists.txt  field_mod.F90  gpu_openmp_mod.F90  gpu_stencil_mod.F90  mglet.F90  precision_mod.F90  timeloop_mod.F90
